--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@ title: Home
 <head>
   <link rel="stylesheet" href="{{ '/styles.css' | relative_url }}">
   <meta charset="utf-8">
-  <title>My Site</title>
+  <title>Esteeb.com</title>
 </head>
 <body>
-  <nav>
-    <a href="/" style="color: red;">Home</a>
-    <a href="/devotional/">Devotional</a>
-    <a href="/notes/">Class Notes</a>
-    <a href="/about/">About</a>
-  </nav>
-  
+   
   <div class="home">
     <h2>Recent Posts</h2>
   
