--- a/notes.html
+++ b/notes.html
@@ -1,4 +1,6 @@
 ---
+layout: default
+title: Class Notes
 ---
 <!DOCTYPE html>
 <html>
@@ -8,14 +10,7 @@
   <title>Class Notes</title>
 </head>
 <body>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/devotional/">Devotional</a>
-    <a href="/notes/" style="color: red;">Class Notes</a>
-    <a href="/class_recordings/">Class Recordings</a>
-    <a href="/about/">About</a>
-  </nav>
-  
+
   <div class="content">
     <h1>Class Notes</h1>
     
