--- a/devotional.html
+++ b/devotional.html
@@ -1,4 +1,6 @@
 ---
+layout: default
+title: Devotionals
 ---
 <!DOCTYPE html>
 <html>
@@ -7,15 +9,7 @@
   <meta charset="utf-8">
   <title>Devotionals</title>
 </head>
-<body>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/devotional/" style="color: red;">Devotional</a>
-    <a href="/notes/">Class Notes</a>
-    <a href="/class_recordings/">Class Recordings</a>
-    <a href="/about/">About</a>
-  </nav>
-  
+<body>  
   <div class="content">
     <h1>Devotionals</h1>
     
