--- a/404.html
+++ b/404.html
@@ -1,25 +1,35 @@
 ---
-permalink: /404.html
 layout: default
+permalink: /404.html
+title: Page Not Found
+lang: en # Explicitly set language for SEO and fallback
 ---
-
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div style="text-align: center; padding: 50px;">
+  <h1>404 - Page Not Found</h1>
+  <p>The page you were looking for doesn't exist.</p>
+  <p>Please try navigating back to our <a href="{{ '/' | relative_url }}">English homepage</a>.</p>
 </div>
+
+<script>
+  (function() {
+    // Get the current path and the referrer (the page that linked to this 404)
+    const currentPath = window.location.pathname;
+    const referrer = document.referrer;
+
+    // --- Safety Check: Prevent infinite loops ---
+    // If we're already on the Spanish 404 page, do nothing.
+    // This is important if /es/404.html somehow links back to itself or gets stuck.
+    if (currentPath.startsWith('/es/') && currentPath.includes('404.html')) {
+        return;
+    }
+
+    // --- Referrer Check for Spanish Context ---
+    // If a referrer exists and its URL path contains '/es/', AND the current URL is NOT already Spanish
+    if (referrer && referrer.includes('/es/') && !currentPath.startsWith('/es/')) {
+      console.log('Redirecting to Spanish 404 based on referrer:', referrer);
+      // Redirect to the Spanish 404 page
+      window.location.replace('/es/404.html');
+    }
+    // Note: If no referrer, or referrer is not Spanish, it will stay on the English 404.
+  })();
+</script>
