added lang yaml

--- a/class_recordings.html
+++ b/class_recordings.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Class Recordings
+lang: en # Set the language to English
 permalink: /class_recordings.html # ADD THIS LINE
 ---
 <h2>Class Recordings</h2>
