--- a/es/index.html
+++ b/es/index.html
@@ -2,7 +2,7 @@
 layout: default 
 permalink: /es/ # Explicitly set permalink for clarity (Polyglot should do this, but being explicit can help)
 title: Inicio # Spanish title
-lang: es # Set the language to Spanish
+lang: es
 ---
 
 <h2>Esteeb.com (Español)</h2>
