--- a/es/notes.html
+++ b/es/notes.html
@@ -2,7 +2,7 @@
 layout: default
 title: Apuntes # Spanish title for the page
 permalink: /es/notes.html # THIS IS CRUCIAL for the Spanish URL
-lang: es # IMPORTANT: Mark this page as Spanish
+lang: es
 ---
 <h2>Apuntes (Español)</h2>
 
