--- a/es/404.html
+++ b/es/404.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /es/404.html
 title: Página no encontrada
-lang: es # Explicitly set language
+lang: es
 ---
 <div style="text-align: center; padding: 50px;">
   <h1>404 - Página no encontrada</h1>
