--- a/es/class_recordings.html
+++ b/es/class_recordings.html
@@ -2,7 +2,7 @@
 layout: default
 title: Class Recordings
 permalink: /es/class_recordings.html # ADD THIS LINE
-lang: es # IMPORTANT: Mark this page as Spanish
+lang: es
 ---
 <h2>Grabaciones de Clase</h2>
 <div class="intro-section">
