--- a/es/devotional.html
+++ b/es/devotional.html
@@ -2,7 +2,7 @@
 layout: default
 title: Devocional # Spanish title for the page
 permalink: /es/devotional.html
-lang: es # IMPORTANT: Mark this page as Spanish
+lang: es
 ---
 <h2>Devocional (Español)</h2>
 
