removed lang comment

--- a/donate.html
+++ b/donate.html
@@ -2,7 +2,7 @@
 layout: default
 title: Donate
 permalink: /donate.html
-lang: en # Set this to 'en' for your English donation page
+lang: en
 ---
 
 <div class="container" style="text-align: center; padding: 20px;">
