--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 permalink: / # ADD THIS LINE
-lang: en # Set the language to English
+lang: en
 ---
 <h2>Esteeb.com</h2>
 
