--- a/notes.html
+++ b/notes.html
@@ -2,7 +2,7 @@
 layout: default
 title: Notes
 permalink: /notes.html # Ensure this line is present
-lang: en # IMPORTANT: Mark this page itself as English
+lang: en
 ---
 <h2>Notes (English)</h2>
   
