--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /404.html
 title: Page Not Found
-lang: en # Explicitly set language for SEO and fallback
+lang: en
 ---
 <div style="text-align: center; padding: 50px;">
   <h1>404 - Page Not Found</h1>
