--- a/class_recordings.html
+++ b/class_recordings.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Class Recordings
-lang: en # Set the language to English
+lang: en
 permalink: /class_recordings.html # ADD THIS LINE
 ---
 <h2>Class Recordings</h2>
