--- a/devotional.html
+++ b/devotional.html
@@ -2,7 +2,7 @@
 layout: default
 title: Devotional
 permalink: /devotional.html
-lang: en # IMPORTANT: Ensure this page itself is marked as English
+lang: en
 ---
 <h2>Devotional (English)</h2>
  
